--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,2 +1,7 @@
-div 
-    p.text-center Registra Tu Cuenta
+extends ../layout/index
+
+block contenido 
+
+  div 
+      h2.text-center.text-2xl.font-bold Crear Cuenta
+
