--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,2 +1,8 @@
-div 
-  h2.text-center.text-6xl text Inicia Sesion 
+extends ../layout/index
+
+block contenido 
+
+  div 
+      h2.text-center.text-2xl.font-bold Inicia Sesion 
+
+
