--- a/views/auth/olvide-password.pug
+++ b/views/auth/olvide-password.pug
@@ -16,12 +16,8 @@ block contenido
                label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Tu E-mail
                input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder= "Tu E-mail" type= "email" name="email")
             
-            div 
-               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
-               input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder= "Password" type= "password" name="password")
-              
             div.flex.items-center.justify-between 
-               a.text-gray-500.text-xs(href="/auth/register") ¿No tienes cuenta? Crea una nueva cuenta 
-               a.text-gray-500.text-xs(href="/auth/olvide-password") Olvide mi contraseña
-
-            input(class="w-full bg-indigo-600 hover:bg-indigo-700 py-3 cursor-pointer text-white font-bold" type="submit" value="Iniciar Sesion")
+               a.text-gray-500.text-xs(href="/auth/login") ¿Y tienes cuenta? Inicia Sesion 
+     
+         
+            input(class="w-full bg-indigo-600 hover:bg-indigo-700 py-3 cursor-pointer text-white font-bold" type="submit" value="Enviar Instrucciones")
