--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -2,6 +2,33 @@ extends ../layout/index
 
 block contenido 
 
-  div 
-      h2.text-center.text-2xl.font-bold Crear Cuenta
+  div.py-10
+      h1.text-4xl.my-10.font-extrabold.text-center Bienes   
+        span.font-normal Raices
+      h2.text-center.text-2xl.font-extrabold= pagina
+      
+      div.mt-8.mx-auto.max-w-md
+        .bg-white.py-8.px-4.shadow
 
+          form.space-y-5
+            div 
+               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Tu nombre
+               input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder= "Tu nombre" type= "text" name="nombre")
+            
+            div 
+               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Tu E-mail
+               input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder= "Tu E-mail" type= "email" name="email")
+            
+            div 
+               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
+               input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder= "Password" type= "password" name="password")
+            div 
+               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="repetir_password") Password
+               input#repetir_password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder= "Repetir Password" type= "repetir_password" name="repetir_password")
+
+            div.flex.items-center.justify-between 
+               a.text-gray-500.text-xs(href="/auth/login") ¿Y tienes cuenta? Inicia Sesion 
+               a.text-gray-500.text-xs(href="/auth/olvide-password") "Olvide mi contraseña  
+            
+            
+            input(class="w-full bg-indigo-600 hover:bg-indigo-700 py-3 cursor-pointer text-white font-bold" type="submit" value="Crear Cuenta")
