--- a/public/css/app.css
+++ b/public/css/app.css
@@ -537,6 +537,9 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+.font-extrabold {
+  font-weight: 800;
+}
 .font-bold {
   font-weight: 700;
 }
